--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiomysql>=0.3.2",
+    "alembic>=1.17.2",
     "fastapi>=0.128.0",
+    "pydantic-settings>=2.12.0",
+    "sqlalchemy>=2.0.45",
     "uvicorn[standard]>=0.40.0",
 ]
