refactor: CI/CD 개선 및 백엔드 보호 (#14)
* feat: CI/CD 파이프라인 추가

* chore: 불필요한 스케줄 관련 모듈 import 제거

* feat: CI 환경에서 SQLite를 사용한 테스트 설정 및 DB 스키마 검증 추가

* refactor: CI/CD 파이프라인 개선 및 Alembic 체크 통합

* feat: Alembic 체크를 위한 SQLite 환경변수 추가

* chore: .pre-commit-config.yaml 파일 삭제

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,11 +1,16 @@
-name: CI/CD Pipeline
+name: Deploy to Production
 on:
-  push:
+  workflow_run:
+    workflows: ["FastAPI CI"]
+    types:
+      - completed
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # CI 성공 시에만 실행
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
