--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,10 +71,21 @@ jobs:
           
           # 마이그레이션 upgrade dry-run (offline 모드)
           echo "📝 마이그레이션 검증 중..."
-          alembic upgrade head --sql > /dev/null 2>&1 || {
-            echo "::error::마이그레이션 체인에 문제가 있습니다!"
+          
+          # stderr와 stdout을 모두 캡처하여 에러 확인
+          if ! OUTPUT=$(alembic upgrade head --sql 2>&1); then
+            echo "::error::마이그레이션 생성 중 오류 발생!"
+            echo "$OUTPUT"
             exit 1
-          }
+          fi
+          
+          # Python 에러나 Traceback이 있는지 확인
+          if echo "$OUTPUT" | grep -E "Traceback|Error|Exception" | grep -v "INFO"; then
+            echo "::error::마이그레이션에 Python 오류가 있습니다!"
+            echo "$OUTPUT"
+            exit 1
+          fi
+          
           echo "✅ 마이그레이션 체인 정상"
 
   import-check:
