--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "email-validator>=2.2.0",
     "authlib>=1.6.6",
     "sqlalchemy-pagination>=0.0.2",
+    "python-multipart>=0.0.21",
 ]
 
 [project.optional-dependencies]
