--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "authlib>=1.6.6",
     "sqlalchemy-pagination>=0.0.2",
     "python-multipart>=0.0.21",
+    "openpyxl>=3.1.0",
 ]
 
 [project.optional-dependencies]
